snt-backup (2.1-53) stable; urgency=low

  [server]
  * cleanup script didn't clean without editing
  * subdirectory support for backup storage
  
  [misc]
  * added build-depends so package building in a pbuilder enviroments works
  * updated gpl2 licence with newer version of the text

 -- Robbert Müller <muller@muze.nl>  Sat, 27 Apr 2013 20:12:59 +0200

snt-backup (2.1-52) stable; urgency=low

  [mysql plugin]
  * add performance_schema to mysql database exclude list

  [postgres plugin]
  * allow global PG_DUMP_OPTS option; add PG_DUMPALL_OPTS option
  * add support for postgres 9.2 and 9.3
  * fixup in PG_DUMP_OPTS option

  [misc]
  * update scripts to use dh_compat level 5

 -- Bas van Sisseren <bas@quarantainenet.nl>  Mon, 25 Feb 2013 15:20:36 +0100

snt-backup (2.1-51) stable; urgency=low

  * Added % as valid character for the backup file name in rmt-server.pl
  * ariadne plugin
    - encodes ariadne internal paths where - is replaced with %2d
    - support extra arguments in the .scan file

 -- Robbert Muller <muller@muze.nl>  Tue, 09 Oct 2012 15:40:52 +0200

snt-backup (2.1-50) stable; urgency=low

  * pgsql plugin: add config-option to add options to pg_dump (e.g. exclude specific tables)
  * files plugin: typo-fix in comment in Default.conf
  * snapshot_wrap.pl: add fstype-detection with the blkid utility
  * lock.pl: many improvements:
    - allow acquire-time of 0 seconds
    - use hardlinks to fix partial-file-read problem.
    - pass on signals SIGHUP, SIGINT, SIGQUIT and SIGTERM to the child process.
    - use signal SIGPWR to kill child process.
    - verify writes when writing to the pid-file. (fix disk-full problem)

 -- Bas van Sisseren <bas@quarantainenet.nl>  Tue, 31 Jul 2012 10:32:43 +0200

snt-backup (2.1-49) stable; urgency=low

  * bugfix: logic-error in passing on error of child process

 -- Bas van Sisseren <bas@quarantainenet.nl>  Thu, 19 Apr 2012 15:30:57 +0200

snt-backup (2.1-48) stable; urgency=low
